--- a/Clients/blazorapp/blazorapp/Layout/FullScreenLayout.razor
+++ b/Clients/blazorapp/blazorapp/Layout/FullScreenLayout.razor
@@ -1,8 +1,10 @@
 ﻿@inherits LayoutComponentBase
+<div class="app-container page" >
+	<main>
+		@Body
+	</main>
+</div>
 
-<main>
-	@Body
-</main>
 
 @code {
 
