--- a/Clients/blazorapp/blazorapp/Layout/LoginDisplay.razor
+++ b/Clients/blazorapp/blazorapp/Layout/LoginDisplay.razor
@@ -7,13 +7,13 @@
         <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/login">Log in</a>
+        <a href="/login">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
 
 @code{
     public void BeginLogOut()
     {
-        Navigation.NavigateToLogout("authentication/logout");
+        Navigation.NavigateToLogout("/login");
     }
 }
