--- a/Clients/blazorapp/blazorapp/Pages/Home.razor
+++ b/Clients/blazorapp/blazorapp/Pages/Home.razor
@@ -1,5 +1,9 @@
 ﻿@page "/home"
+
+@using Microsoft.AspNetCore.Authorization
+
 @layout MainLayout
+@attribute [Authorize]
 
 <PageTitle>Home</PageTitle>
 
