fix interceptor + camelcase at httpclient at blazor

--- a/Clients/blazorapp/blazorapp/Pages/Home.razor
+++ b/Clients/blazorapp/blazorapp/Pages/Home.razor
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Authorization
 
 @layout MainLayout
-@attribute [Authorize]
+@* @attribute [Authorize] *@
 
 <PageTitle>Home</PageTitle>
 
