--- a/Clients/blazorapp/blazorapp/Pages/Home.razor
+++ b/Clients/blazorapp/blazorapp/Pages/Home.razor
@@ -9,8 +9,20 @@
 
 <h1>Hello, world!</h1>
 
-<div class="alert alert-warning" role="alert">
-    Before authentication will function correctly, you must configure your provider details in <code>Program.cs</code>
+Welcome to your new app.
+
+<div>
+    <AuthorizeView>
+        <Authorized>
+            Authorized
+            @context.User.Identity?.Name           
+        </Authorized>
+        <NotAuthorized>
+            Not Authorized
+        </NotAuthorized>
+    </AuthorizeView>
 </div>
 
-Welcome to your new app.
+@code{
+
+}
