--- a/Clients/blazorapp/blazorapp/Pages/Login.razor
+++ b/Clients/blazorapp/blazorapp/Pages/Login.razor
@@ -65,6 +65,10 @@
 				loading = false;
 				NavigationManager.NavigateTo(returnUrl);
 			}
+			else
+			{
+				loading = false;
+			}
 		}
 		catch (Exception ex)
 		{
