--- a/Clients/blazorapp/blazorapp/Pages/Home.razor
+++ b/Clients/blazorapp/blazorapp/Pages/Home.razor
@@ -1,9 +1,14 @@
 ﻿@page "/home"
 
 @using Microsoft.AspNetCore.Authorization
-
+@using System.Security.Claims
+@inject AuthenticationStateProvider AuthenticationStateProvider
 @layout MainLayout
-@* @attribute [Authorize] *@
+@attribute [Authorize] 
+
+
+
+
 
 <PageTitle>Home</PageTitle>
 
@@ -23,6 +28,45 @@ Welcome to your new app.
     </AuthorizeView>
 </div>
 
-@code{
 
+<h1>ClaimsPrincipal Data</h1>
+
+<button @onclick="GetClaimsPrincipalData">Get ClaimsPrincipal Data</button>
+
+<p>@authMessage</p>
+
+@if (claims.Count() > 0)
+{
+    <ul>
+        @foreach (var claim in claims)
+        {
+            <li>@claim.Type: @claim.Value</li>
+        }
+    </ul>  
+}
+
+<p>@surname</p>
+
+@code{
+    private string? authMessage;
+    private string? surname;
+    private IEnumerable<Claim> claims = Enumerable.Empty<Claim>();
+
+    private async Task GetClaimsPrincipalData()
+    {
+        var authState = await AuthenticationStateProvider
+            .GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (user.Identity is not null && user.Identity.IsAuthenticated)
+        {
+            authMessage = $"{user.Identity.Name} is authenticated.";
+            claims = user.Claims;
+            surname = user.FindFirst(c => c.Type == ClaimTypes.Surname)?.Value;
+        }
+        else
+        {
+            authMessage = "The user is NOT authenticated.";
+        }
+    }
 }
