--- a/Clients/blazorapp/blazorapp/Pages/Login.razor
+++ b/Clients/blazorapp/blazorapp/Pages/Login.razor
@@ -8,37 +8,41 @@
 @using blazorapp.Models.DTO;
 @using blazorapp.Services.Account;
 
-<h3 class="card-header">Login</h3>
-<div class="card-body">
-	<EditForm Model="@model" OnValidSubmit="HandleSubmit">
-		<DataAnnotationsValidator />
-		<div class="row">
-			<div class="mb-3">
-				<label for="Email" class="form-label">Email</label>			
-				<InputText @bind-Value="model.Email" class="form-control" />
-				<ValidationMessage For="@(() => model.Email)" />		
-			</div>
-			<div class="mb-3">
-				<label for="Password" class="form-label">Password</label>			
-				<InputText @bind-Value="model.Password" type="password" class="form-control" />
-				<ValidationMessage For="@(() => model.Password)" />
-			</div>
+
+<div class="card" style="width: 100rem;">
+	<div class="card-header">Login</div>
+	<div class="card-body">
+		<EditForm Model="@model" OnValidSubmit="HandleSubmit">
+			<DataAnnotationsValidator />
 			<div class="row">
-				<div class="mb-3 col">
-					<button class="btn btn-primary">
-						@if (loading)
-						{
-							<span class="spinner-border spinner-border-sm mr-1"></span>
-						}
-						Login
-					</button>			
-					<NavLink class="nav-link btn btn-link" href="register">Register</NavLink>
-					<NavLink class="nav-link btn btn-link pe-0" href="forgot-password">Forgot Password?</NavLink>
-				</div>				
+				<div class="mb-3">
+					<label for="Email" class="form-label">Email</label>
+					<InputText @bind-Value="model.Email" class="form-control" />
+					<ValidationMessage For="@(() => model.Email)" />
+				</div>
+				<div class="mb-3">
+					<label for="Password" class="form-label">Password</label>
+					<InputText @bind-Value="model.Password" type="password" class="form-control" />
+					<ValidationMessage For="@(() => model.Password)" />
+				</div>
+				<div class="row">
+					<div class="mb-3 col">
+						<button class="btn btn-primary">
+							@if (loading)
+							{
+								<span class="spinner-border spinner-border-sm mr-1"></span>
+							}
+							Login
+						</button>
+						<NavLink class="nav-link btn btn-link" href="register">Register</NavLink>
+						<NavLink class="nav-link btn btn-link pe-0" href="forgot-password">Forgot Password?</NavLink>
+					</div>
+				</div>
 			</div>
-		</div>
-	</EditForm>
+		</EditForm>
+	</div>
 </div>
+
 
 @code {
 
