--- a/Clients/blazorapp/blazorapp/_Imports.razor
+++ b/Clients/blazorapp/blazorapp/_Imports.razor
@@ -9,5 +9,5 @@
 @using Microsoft.JSInterop
 @using blazorapp
 @using blazorapp.Layout
-@using blazorapp.Helpers;
-@using blazorapp.Services;
+@using blazorapp.Helpers
+@using blazorapp.Services
