--- a/Clients/mauiapp/mauiapp/Components/Pages/AuthNeed.razor
+++ b/Clients/mauiapp/mauiapp/Components/Pages/AuthNeed.razor
@@ -1,18 +1,23 @@
-﻿@page "/home"
+﻿@page "/authneed"
 
 @using Microsoft.AspNetCore.Authorization
 @using System.Security.Claims
+@using Microsoft.AspNetCore.Components.Authorization
+@using mauiapp.Components.Layout
+
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @layout MainLayout
-@attribute [Authorize] 
 
-<PageTitle>Home</PageTitle>
+@attribute [Authorize]
+
+
+<PageTitle>Auth</PageTitle>
 
 <div>
     <AuthorizeView>
         <Authorized>
             Authorized
-            @context.User.Identity?.Name           
+            @context.User.Identity?.Name
         </Authorized>
         <NotAuthorized>
             Not Authorized
@@ -34,12 +39,12 @@
         {
             <li>@claim.Type: @claim.Value</li>
         }
-    </ul>  
+    </ul>
 }
 
 <p>@surname</p>
 
-@code{
+@code {
     private string? authMessage;
     private string? surname;
     private IEnumerable<Claim> claims = Enumerable.Empty<Claim>();
