--- a/Clients/mauiapp/mauiapp/Components/Pages/Counter.razor
+++ b/Clients/mauiapp/mauiapp/Components/Pages/Counter.razor
@@ -1,5 +1,9 @@
 ﻿@page "/counter"
 
+@using mauiapp.Components.Layout
+
+@layout MainLayout
+
 <h1>Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
