--- a/Clients/mauiapp/mauiapp/Components/Pages/Home.razor
+++ b/Clients/mauiapp/mauiapp/Components/Pages/Home.razor
@@ -1,5 +1,69 @@
-﻿@page "/"
+﻿@page "/home"
 
-<h1>Hello, world!</h1>
+@using Microsoft.AspNetCore.Authorization
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Components.Authorization
+@using mauiapp.Components.Layout
 
-Welcome to your new app.
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
+@layout MainLayout
+
+@attribute [Authorize] 
+
+<PageTitle>Home</PageTitle>
+
+<div>
+    <AuthorizeView>
+        <Authorized>
+            Authorized
+            @context.User.Identity?.Name           
+        </Authorized>
+        <NotAuthorized>
+            Not Authorized
+        </NotAuthorized>
+    </AuthorizeView>
+</div>
+
+
+<h1>ClaimsPrincipal Data</h1>
+
+<button @onclick="GetClaimsPrincipalData">Get ClaimsPrincipal Data</button>
+
+<p>@authMessage</p>
+
+@if (claims.Count() > 0)
+{
+    <ul>
+        @foreach (var claim in claims)
+        {
+            <li>@claim.Type: @claim.Value</li>
+        }
+    </ul>  
+}
+
+<p>@surname</p>
+
+@code{
+    private string? authMessage;
+    private string? surname;
+    private IEnumerable<Claim> claims = Enumerable.Empty<Claim>();
+
+    private async Task GetClaimsPrincipalData()
+    {
+        var authState = await AuthenticationStateProvider
+            .GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (user.Identity is not null && user.Identity.IsAuthenticated)
+        {
+            authMessage = $"{user.Identity.Name} is authenticated.";
+            claims = user.Claims;
+            surname = user.FindFirst(c => c.Type == ClaimTypes.Surname)?.Value;
+        }
+        else
+        {
+            authMessage = "The user is NOT authenticated.";
+        }
+    }
+}
