--- a/Clients/blazorapp/blazorapp/Layout/NavMenu.razor
+++ b/Clients/blazorapp/blazorapp/Layout/NavMenu.razor
@@ -12,6 +12,9 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            </NavLink>           
+            <NavLink class="nav-link" href="authneed" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Auth
             </NavLink>
         </div>              
     </nav>
