--- a/Clients/mauiapp/mauiapp/Routes.razor
+++ b/Clients/mauiapp/mauiapp/Routes.razor
@@ -1,6 +1,29 @@
-﻿<Router AppAssembly="@typeof(MauiProgram).Assembly">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+
+
+@* <Router AppAssembly="@typeof(MauiProgram).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Components.Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
+</Router> *@
+
+<CascadingAuthenticationState>
+<Router AppAssembly="@typeof(MauiProgram).Assembly">
+    <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(Components.Layout.FullScreenLayout)">
+              <NotAuthorized>
+                    <mauiapp.Components.Layout.RedirectToLogin />
+                </NotAuthorized>
+          </AuthorizeRouteView>
+        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+    </Found>
+        <NotFound>
+            <PageTitle>Not found</PageTitle>
+            <LayoutView Layout="@typeof(Components.Layout.FullScreenLayout)">
+                <mauiapp.Components.Pages.Error404></mauiapp.Components.Pages.Error404>
+            </LayoutView>
+        </NotFound>
 </Router>
+</CascadingAuthenticationState>
